added a feature where customers are at liberty to select the pizza type of their choiuce ie african pizza, brazilian pizza among others

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                         <div>
                             <h2>Place Your Order Here</h2>
                         </div>
-                        <!-- <div>
-                            <label for="type  of pizza">Select the type of pizza</label>
+                        <div>
+                            <label for="type  of pizza">Select pizza type</label>
                             <select name="pizzaTypes" id="pizzaTypes" required>
                                 <option value="default"></option>
-                                <option value="Neapolitan Pizza"> Neapolitan Pizza</option>
-                                <option value="Chicago Pizza">Chicago Pizza</option>
-                                <option value="Greek Pizza">Greek Pizza</option>
-                                <option value="Kenyan Pizza">Kenyan Pizza</option>
-                                <option value="Kakamega Pizza">Kakamega Pizza</option>
-                                <option value="Nairobi Pizza">Nairobi Pizza</option>
-                                <option value="African Pizza">African Pizza</option>
+                                <option value="Chineese Pizza">Chineese Pizza</option>
+                                <option value="American Pizza">American Pizza</option>
+                                <option value="Italian Pizza">Italian Pizza</option>
+                                <option value="Brazilian Pizza">Brazilian Pizza</option>
+                                <option value="Egyptian Pizza">Egyptian pizza</option>
+                                <option value="English pizza">English pizza</option>
+                                <option value="Indian Pizza">Indian Pizza</option>
                             </select>
-                        </div> -->
+                        </div>
                         <div>
                             <label for="size">Select the size</label>
                             <select name="pizzaTypes" id="pizzaSize" required>
