commented/made it unfunctional, the place where customers can select the nature or type of pizza that they are interested in purchasing

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div>
                             <h2>Place Your Order Here</h2>
                         </div>
-                        <div>
+                        <!-- <div>
                             <label for="type  of pizza">Select pizza type</label>
                             <select name="pizzaTypes" id="pizzaTypes" required>
                                 <option value="default"></option>
@@ -60,7 +60,7 @@
                                 <option value="English pizza">English pizza</option>
                                 <option value="Indian Pizza">Indian Pizza</option>
                             </select>
-                        </div>
+                        </div> -->
                         <div>
                             <label for="size">Select the size</label>
                             <select name="pizzaTypes" id="pizzaSize" required>
