added a footer code at the html section

--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
         </div> -->
 
         <!-- FOOTER -->
-        <!-- <div class="pageFooter">
-            <p>Copyright (c) 2021, Augustine Kadima Samuel</p>
-        </div> -->
+        <div class="pageFooter">
+            <p>Follow us on Facebook: Kirui-Pizza-Plcae</p>
+            <p>Follow us on Twitter: @Kirui-Pizza-Plcae</p>
+
+
+        </div> 
 
 
     </div>
