--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         </div> -->
 
         <!-- FOOTER -->
-        <div class="pageFooter">
-            <p>Follow us on Facebook: Kirui-Pizza-Plcae</p>
-            <p>Follow us on Twitter: @Kirui-Pizza-Plcae</p>
+        <div class="footer">
+            <p>Follow us on Facebook: Kirui-Pizza-Plcae. </br>Follow us on Twitter: @Kirui-Pizza-Plcae</p>
+        
 
 
         </div> 
