changed the footer's wordings

--- a/index.html
+++ b/index.html
@@ -119,10 +119,7 @@
         <!-- FOOTER -->
         <footer>
             <div>
-            <img src="./ASSETS/IMAGES/twitter.png" height="40px" width="40px" alt="">
-            <img src="./ASSETS/IMAGES/facebook.png" height="40px" width="40px" alt="">
-            <img src="./ASSETS/IMAGES/pinterest.png" height="40px" width="40px"alt="">
-            <img src="./ASSETS/IMAGES/instagram.png" height="40px" width="40px"alt="">
+            <p>Follow us on Facebook: Kirui Pizza Place</p>
             
             
         </footer>
