added content on the footer's section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 </div>
         <footer>
             <div>
-            <p>Follow us on Facebook: Kirui Pizza Place</p>
+            <p>Follow us on Facebook: Kirui Pizza Place</p><br><br>
+            <p>Follow us on Twitter: @kirui_pizza</p>
             
             
         </footer>
