made the footer's content to be in different lines

--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
                 </div>
         <footer>
             <div>
-            <p>Follow us on Facebook: Kirui Pizza Place</p><br><br>
+            <p>Follow us on Facebook: Kirui Pizza Place</p>
+            </div>>
+            <div>
             <p>Follow us on Twitter: @kirui_pizza</p>
+            </div>
             
             
         </footer>
