--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div class="jumbotron text-center">
-        <h1>WELCOME TO KIRUI PIZZA PLACE</h1>
+        <h2>WELCOME TO BISHOP OF HOPE PIZZA INN</h2>
         <p>To our esteemed customers, Tunasema Karibu sana</p> 
       </div>
       <div class="left">
-        <h2>About Kirui Pizza Place</h2>
-        <p>This is an online Pizza place that assist kenyanc customers to be served their favorite cuisine, pizza, within the city of Nairobi. The customers or clients have to place orders at the company's website and then wait for delivery at the comfort of their living room. Thus, customers do not have to worry about travelling to the place and place their orders manually. However, the customers are necessited to pay an extra Ksh. 200 for the delivery to be made to their homes.</p>
+        <h2>About Bishop of Hope Pizza Inn</h2>
+        <p>This is an online Pizza place that assist kenyans customers to be served their favorite cuisine, pizza, within the city of Nairobi. The customers or clients have to place orders at the company's website and then wait for delivery at the comfort of their living room. Thus, customers do not have to worry about travelling to the place and place their orders manually. However, the customers are necessited to pay an extra Ksh. 200 for the delivery to be made to their homes.</p>
         <h2>Mission Statement</h2>
         <p>To provide high quality pizzas to residents of Nairobi and its environs</p>
         <h2>Vision Statement</h2>
@@ -26,7 +26,7 @@
         <p>Our main objective is not only to make profits, but also to ensure that customers feel that their money is spent on something worth it</p> -->
         <h2>Contact Us</h2>
         <p>Phone Number: +254708541280</p>
-        <p>Email: isaac.kirui@moringaschool.com</p>
+        <p>Email: isaackirui45@gmail.com</p>
     </div>
     <div class="inputCollector">
                     <form action="submit">
